Added Peris Feasibility Study and converted to LuaLaTeX format

--- a/1ο Παραδοτέο/Project-Plan/Files/Project-plan-v0.1.tex
+++ b/1ο Παραδοτέο/Project-Plan/Files/Project-plan-v0.1.tex
@@ -35,7 +35,7 @@
 \urlstyle{same}
 
 %Enter Title Here
- \title{Project-plan v0.1 \\ LibShare}
+ \title{Project-plan-v0.1 \\ LibShare}
 \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree}
 
 \begin{document}
