--- a/1ο Παραδοτέο/Risk-Assessment/Files/Risk-assessment-v0.1.tex
+++ b/1ο Παραδοτέο/Risk-Assessment/Files/Risk-assessment-v0.1.tex
@@ -23,7 +23,7 @@
           [Language=Default]{Liberation Sans}
 
 %Enter Title Here
- \title{Risk-assessment v0.1\\ LibShare}
+ \title{Risk-assessment-v0.1\\ LibShare}
 \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree}
 
 \begin{document}
@@ -41,9 +41,9 @@
 
 \textbf{Σημείωση:} Για την ανάλυση ρίσκων χρησιμοποιήσαμε τα πεδία που θεωρήσαμε ότι εφαρμόζουν από τη φόρμα καταγραφής κινδύνων στις διαφάνειες του μαθήματος. Όταν η τεχνική αντιμετώπισης και μετριασμού συμπίπτουν τις έχουμε βάλει μάζι.
 
-Επίσης στο πεδίο της συνδεόμενης δραστηριότητας αναφερόμαστε στις δραστηριότητες του Σχήματος 4 στο Project-plan v0.1.pdf.
+Επίσης στο πεδίο της συνδεόμενης δραστηριότητας αναφερόμαστε στις δραστηριότητες του Σχήματος 4 στο Project-plan-v0.1.pdf.
 
-Τέλος θεωρούμε, όπως αναφέραμε και στο Project-plan v0.1.pdf ότι έχουμε θεωρήσει ότι κάνουμε ίδρυση startup εταιρίας με σκοπό την διεκπεραίωση του έργου.
+Τέλος θεωρούμε, όπως αναφέραμε και στο Project-plan-v0.1.pdf ότι έχουμε θεωρήσει ότι κάνουμε ίδρυση startup εταιρίας με σκοπό την διεκπεραίωση του έργου.
 
 \subsection{Κίνδυνος: Καθυστέρηση Συγγραφής Κώδικα}
 \begin{itemize}
@@ -124,7 +124,7 @@
 \begin{itemize}
 	\item \textbf{Πιθανότητα Κινδύνου:} Χαμηλή
 	\item \textbf{Συνδεόμενη Δραστηριότητα:} ΤΥ 24
-	\item \textbf{Υπεύθυνος Αντιμετώπισης:} Υπεύθυνοι ασφαλείας (Σχήμα 2 στο Project-plan v0.1.pdf)
+	\item \textbf{Υπεύθυνος Αντιμετώπισης:} Υπεύθυνοι ασφαλείας (Σχήμα 2 στο Project-plan-v0.1.pdf)
 	\item \textbf{Σοβαρότητα:} Υψηλή
 	\item \textbf{Σοβαρότητα Συνεπειών:} Υψηλή
 	\item \textbf{Τύπος:} Ποιότητα
