--- a/1ο Παραδοτέο/Team-Risk-Assessment/Files/Team-risk-assessment-v0.1.tex
+++ b/1ο Παραδοτέο/Team-Risk-Assessment/Files/Team-risk-assessment-v0.1.tex
@@ -23,7 +23,7 @@
           [Language=Default]{Liberation Sans}
 
 %Enter Title Here
- \title{Team-risk-assessment v0.1\\ LibShare}
+ \title{Team-risk-assessment-v0.1\\ LibShare}
 \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree}
 
 \begin{document}
@@ -99,7 +99,7 @@
 \begin{itemize}
 	\item \textbf{Περιγραφή:} Το πρότζεκτ στα τελευταία παραδοτέα θα χρειαστεί συγγραφή κώδικα. Τότε όμως θα είναι περίοδος εξεταστικής για την ομάδα και δεν θα υπάρχει πολύς χρόνος για σωστή επανάληψη και ενασχόληση με γλώσσες προγραμματισμού διασύνδεση διαφορετικών πλατφορμών κτλ.
 	\item \textbf{Πιθανότητα Κινδύνου:} Μεσαία
-	\item \textbf{Συνδεόμενη Δραστηριότητα:} ΤΥ 23, ΤΥ 24, ΤΥ 28 (από Team-plan v0.1 Σχήμα 4)
+	\item \textbf{Συνδεόμενη Δραστηριότητα:} ΤΥ 23, ΤΥ 24, ΤΥ 28 (από Team-plan-v0.1 Σχήμα 4)
 	\item \textbf{Υπεύθυνος Αντιμετώπισης:} Όλη η ομάδα
 	\item \textbf{Επίπεδο Σοβαρότητας Συνεπειών:} Μεσαίο
 	\item \textbf{Πρώτο Γεγονός Ενεργοποίησης του Κινδύνου:} Έλλειψη εμπειρίας τεχνικών δεξιοτήτων.
