--- a/1ο Παραδοτέο/Team-Plan/Files/Team-plan-v0.1.tex
+++ b/1ο Παραδοτέο/Team-Plan/Files/Team-plan-v0.1.tex
@@ -10,6 +10,8 @@
 \usepackage{float}
 \usepackage{parskip}
 \usepackage[font=small,labelfont=bf]{caption}
+\usepackage{hyperref}
+
 
 \babelprovide[import=el, main, onchar=ids fonts]{greek} % can also do import=el-polyton
 \babelprovide[import, onchar=ids fonts]{english}
@@ -22,10 +24,19 @@
           [Language=Default]{Liberation Sans}
 \babelfont{tt}
           [Language=Default]{Liberation Sans}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=blue,      
+	urlcolor=blue,
+	pdftitle={An Example},
+	pdfpagemode=FullScreen,
+}
+
 
 %Enter Title Here
- \title{Team-plan v0.1 \\ LibShare}
-\author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree}
+ \title{Team-plan-v0.1 \\ LibShare}
+ \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree\\ \\ \href{https://github.com/GregKapadoukas/University-Software-Engineering-Project}{GitHub Link}}
 
 \begin{document}
 
