Added the mockup screens made by Xristos, he will make the rest tommorrow and we will then add them too

--- a/1ο Παραδοτέο/Project-Description/Files/Project-description-v0.1.tex
+++ b/1ο Παραδοτέο/Project-Description/Files/Project-description-v0.1.tex
@@ -9,6 +9,7 @@
 \usepackage{wrapfig}
 \usepackage{float}
 \usepackage{parskip}
+\usepackage[font=small,labelfont=bf]{caption}
 
 \babelprovide[import=el, main, onchar=ids fonts]{greek} % can also do import=el-polyton
 \babelprovide[import, onchar=ids fonts]{english}
@@ -38,6 +39,7 @@
 
 %Insert Body Here
 \section{Περιγραφή:}
+\label{Περιγραφή}
 Το προς δημιουργία project λογισμικού αποτελεί μια εφαρμογή Peer-2-Peer ενοικίασης βιβλίων. Δηλαδή η εφαρμογή αυτή επιτρέπει χρήστες να νοικιάζουν βιβλία ο ένας από τον άλλο για χρηματική ανταμοιβή, με ενσωματωμένη ασφάλεια έναντι κλοπών. Ο χρήστης σε πρώτο βήμα θα μπορεί να δημιουργεί προσωπικό λογαριασμό στην εφαρμογή, εισάγοντας το προσωπικό του email, ένα username και ένα password. Μετά τη δημιουργία του λογαριασμού του ο χρήστης θα μπορεί να εισέρχεται στην εφαρμογή εισάγοντας τα στοιχεία του. Στην εφαρμογή του δίνονται οι εξής δυνατότητες:
 
 \begin{itemize}
@@ -73,7 +75,126 @@
 
 \section{Mock-up Screens}
 
+Στο Σχήμα \ref{Οθόνη "Rent Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της ενοικίασης βιβλίων.
+
+\subsection{Rent Book:}
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings, Rent Book, Transaction History.png}}
+	\caption{Οθόνη "Rent Book" λειτουργικότητας}
+	\label{Οθόνη "Rent Book" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way" και ένα κουμπί "Request Rental". 
+
+Η λειτουργικότητα του "Request Rental" είναι αυτή που εξηγείται ως "αίτηση ενοικίασης" στο κεφάλαιο \ref{Περιγραφή}. 
+
+Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλα τα διαθέσιμα βιβλία και τις πληροφορίες τους ανά στήλη.
+
+\subsection{User Search}
+
+Στο Σχήμα \ref{Οθόνη "User Search" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της αναζήτησης χρηστών.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/User Search.png}}
+	\caption{Οθόνη "User Search" λειτουργικότητας}
+	\label{Οθόνη "User Search" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Name", "Address", "Num of Books" "Delivery Way" και ένα κουμπί "View Books". 
+
+Το κουμπί "View Books" μεταβιβάζει τον χρήστη σε μια σελίδα όπως τη σελίδα του "Rent Book" (Σχήμα \ref{Οθόνη "Rent Book" λειτουργικότητας} που θα περιέχει μόνο τα βιβλία του χρήστη που επιλέχθηκε.
+
+Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλους τους χρήστες που πληρούν την αναζήτηση και τις πληροφορίες τους ανά στήλη.
+
+\subsection{Review Peers}
+
+Στο Σχήμα \ref{Οθόνη "Review peers" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας του Review άλλων χρηστών.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/template.png}}
+	\caption{Οθόνη "Review peers" λειτουργικότητας}
+	\label{Οθόνη "Review peers" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τα ονόματα των χρηστών με τους οποίους έχουν γίνει προηγούμενες συναλλαγές, και το βιβλίο που ενοικιάστηκε.
+
+Επίσης φαίνεται και ένα γραφικό δίπλα σε κάθε συναλλαγή με λειτουργικότητα της κριτικής του άλλου χρήστη από 1 έως 5 "αστεράκια".
+
+Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλους τους χρήστες και τα βιβλία για τις προηγούμενες συναλλαγές που έχουν γίνει.
+
+\subsection{My Listings}
+
+Στο Σχήμα \ref{Οθόνη "My Listings" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής των βιβλίων που προσφέρει ο χρήστης σε άλλους να νοικιάσουν, μαζί με δυνατότητα προσθήκης και αφαίρεσης άλλων βιβλίων.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings, Rent Book, Transaction History.png}}
+	\caption{Οθόνη "My Listings" λειτουργικότητας}
+	\label{Οθόνη "My Listings" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way" και κουμπιά "Remove Listing" και στο τέλος της σελίδας ένα κουμπί "Add Listing", όπου πλέον ο χρήστης συμπληρώνει τα στοιχεία του βιβλίου που θα νοικιάσει σε ένα popup screen.
+
+Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν το σύνολο των βιβλίων που προσφέρει ο συνδεδεμένος χρήστης για ενοικίαση από άλλους.
+
+\subsection{Requests}
+
+Στο Σχήμα \ref{Οθόνη "Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής αιτήσεων άλλων και της αποδοχή τους (δηλαδή προσφοράς του βιβλίου στον χρήστη που το ζητάει και έκανε την αίτηση και αποδοχή του χρηματικού αντίτιμου). Επίσης στο κάτω μέρος της σελίδας υπάρχει ένα κουμπί που προσφέρει λειτουργικότητα δημιουργίας νέας αίτησης.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/template.png}}
+	\caption{Οθόνη "Requests" λειτουργικότητας}
+	\label{Οθόνη "Requests" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way", "User", "Bounty" και κουμπιά "Claim Request" και στο τέλος της σελίδας το κουμπί "Add Requests", όπου πλέον ο χρήστης συμπληρώνει τα στοιχεία του βιβλίου που ζητάει να νοικιάσει σε ένα popup screen.
+
+Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν το σύνολο των στοιχείων για τα requests που είναι ενεργά εκείνη τη χρονική στιγμή.
+
+\subsection{Transaction History}
+
+Στο Σχήμα \ref{Οθόνη "Transaction History" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής συναλλαγών (προηγούμενων και τρεχόντων) καθώς και της αποδοχής ή απόρριψης αιτημάτων και ανανέωσης κατάστασης κατοχής βιβλίου (δηλαδή ανανεώνεται όταν έχει φτάσει το βιβλίο στον ενοικιαστή και πίσω στον ιδιοκτήτη).
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings, Rent Book, Transaction History.png}}
+	\caption{Οθόνη "Transaction History" λειτουργικότητας}
+	\label{Οθόνη "Transaction History" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way", "Transaction Status" και εναλλακτικά κουμπιά "Accept Request" και "Deny Request" ή "Toggle Possession Status" ή κανένα κουμπί, αντίστοιχα με την κατάσταση της συναλλαγής, όπως αναφέρεται στο κεφάλαιο \ref{Περιγραφή}.
+
+Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλο το ιστορικό των συναλλαγών για τον χρήστη που είναι συνδεδεμένος.
+
+\subsection{Profile}
+
+Στο Σχήμα \ref{Οθόνη "Profile" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής και αλλαγής των στοιχείων του λογαριασμού του συνδεδεμένου χρήστη.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/change_password.png}}
+	\caption{Οθόνη "Profile" λειτουργικότητας}
+	\label{Οθόνη "Profile" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με γραμμές με τίτλους "Username", "Email", "Address" και "Phone". Στη δεξιά μεριά του πίνακα προβάλλονται κάθε φορά τα στοιχεία του χρήστη.
+
+Στη κάτω μεριά της οθόνης υπάρχει ένα κουμπί "Edit" το οποίο επιτρέπει στον χρήστη να ανανεώσει τα στοιχεία του.
+
+\subsection{Balance}
+
+Στο Σχήμα \ref{Οθόνη "Balance" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής χρημάτων στον λογαριασμό και της προσθήκης και αφαίρεσης χρηματικού ποσού από τον λογαριασμό.
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Balance.png}}
+	\caption{Οθόνη "Balance" λειτουργικότητας}
+	\label{Οθόνη "Balance" λειτουργικότητας}
+\end{figure}
+
+Παρατηρούμε ότι η οθόνη αυτή περιέχει κουμπιά "Add Money" και "Remove Balance" για την προσθήκη και αφαίρεση χρηματικού ποσού από τον λογαριασμό αντίστοιχα.
+
+Στη μέση της οθόνης υπάρχει ένα πεδίο "Balance" στο οποίο φαίνεται το ποσό που έχει διαθέσιμο ο χρήστης στον λογαριασμό του (έχουν αφαιρεθεί οι προκαταβολές και οι ανταμοιβές για αιτήσεις, τα οποία όμως μπορούν να επιστραφούν στο μέλλον).
+
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
+
 \begin{enumerate}
 	\item \textbf{Γρηγόρης Καπαδούκας:} Author
 	\item \textbf{Χρήστος Μπεστητζάνος:} Editor, Contributor
