Added final mock-ups, ready for first deliverable

--- a/1ο Παραδοτέο/Project-Description/Files/Project-description-v0.1.tex
+++ b/1ο Παραδοτέο/Project-Description/Files/Project-description-v0.1.tex
@@ -45,7 +45,7 @@
 \begin{itemize}
 	\item Θα μπορεί να νοικιάσει ένα βιβλίο από άλλους χρήστες της εφαρμογής. Κατά τη λειτουργία αυτή θα εμφανίζεται μια λίστα από διαθέσιμα βιβλία προς ενοικίαση από χρήστες κοντά του (στην ίδια πόλη με αυτόν) που κάνουν συναλλαγές πρόσωπο με πρόσωπο ή από χρήστες που μένουν μακριά αλλά δέχονται ταχυδρομικές συναλλαγές. 
 
-Έτσι αφού διαλέξει ο χρήστης το βιβλίο που θέλει, του εμφανίζεται η λίστα των χρηστών που προσφέρουν το βιβλίο αυτό για ενοικίαση. Σε αυτή τη λίστα βλέπει ο χρήστης τους τρόπους συναλλαγής που δέχεται κάθε χρήστης (ταχυδρομικώς ή πρόσωπο με πρόσωπο). Αφού επιλέξει έναν μπορεί να του κάνει "Αίτηση ενοικίασης". Έπειτα της αίτησης, ενημερώνεται ο χρήστης-ιδιοκτήτης του βιβλίου και έχει την επιλογή να δεχτεί ή να απορρίψει την αίτηση αυτή.
+Έτσι αφού διαλέξει ο χρήστης το βιβλίο που θέλει, (υπάρχει και λειτουργία αναζήτησης στη λίστα) του εμφανίζεται η λίστα των χρηστών που προσφέρουν το βιβλίο αυτό για ενοικίαση. Σε αυτή τη λίστα βλέπει ο χρήστης τους τρόπους συναλλαγής που δέχεται κάθε χρήστης (ταχυδρομικώς ή πρόσωπο με πρόσωπο). Αφού επιλέξει έναν μπορεί να του κάνει "Αίτηση ενοικίασης". Έπειτα της αίτησης, ενημερώνεται ο χρήστης-ιδιοκτήτης του βιβλίου και έχει την επιλογή να δεχτεί ή να απορρίψει την αίτηση αυτή.
 
 Αν τη δεχτεί, οι δύο χρήστες βλέπουν τα στοιχεία επικοινωνίας ο ένας του άλλου και αφού λάβει ο ενοικιαστής το βιβλίο ενημερώνουν οι χρήστες την εφαρμογή και χρεώνεται αυτομάτως ο ενοικιαστής ημερήσια, μέχρι το βιβλίο να επιστραφεί στον ιδιοκτήτη. 
 
@@ -73,23 +73,27 @@
 
 \end{itemize}
 
-\section{Mock-up Screens}
+\section{Mock-up Οθόνες}
 
-Στο Σχήμα \ref{Οθόνη "Rent Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της ενοικίασης βιβλίων.
+\textbf{Σημέιωση:} Οι οθόνες στο κεφάλαιο αυτό είναι ενδεικτικές και δεν θα αποτελούν αναγκαστικά την ακριβή δομή του τελικού project. Λειτουργούν παραπάνω για ένδειξη του περιεχομένου της τελικής οθόνης και όροι όπως "στο κάτω μέρος της οθόνης" αναφέρονται μόνο στη δομή του σχήματος που δίνεται και όχι αναγκαστικά του τελικού project.
 
 \subsection{Rent Book:}
 
+Στο Σχήμα \ref{Οθόνη "Rent Book" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της ενοικίασης βιβλίων.
+
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings, Rent Book, Transaction History.png}}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Rent Book.png}}
 	\caption{Οθόνη "Rent Book" λειτουργικότητας}
 	\label{Οθόνη "Rent Book" λειτουργικότητας}
 \end{figure}
 
-Παρατηρούμε ότι η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way" και ένα κουμπί "Request Rental". 
+Η οθόνη αυτή περιέχει έναν πίνακα με στήλες με τίτλους "Title", "Author", "Owner", "Delivery Way" και ένα κουμπί "Request Rental". 
 
-Η λειτουργικότητα του "Request Rental" είναι αυτή που εξηγείται ως "αίτηση ενοικίασης" στο κεφάλαιο \ref{Περιγραφή}. 
+Η λειτουργικότητα του "Request Rental" είναι αυτή που εξηγείται ως "αίτηση ενοικίασης" στο κεφάλαιο \ref{Περιγραφή}.
 
-Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλα τα διαθέσιμα βιβλία και τις πληροφορίες τους ανά στήλη.
+Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλα τα διαθέσιμα βιβλία και τις πληροφορίες τους ανά στήλη, μαζί με την τιμή ενοικίασης ανά ημέρα (κάτω από το "Request Rental").
+
+Επίσης υπάρχει και λειτουργία αναζήτησης συγκεκριμένου βιβλίου στο κάτω μέρος της οθόνης.
 
 \subsection{User Search}
 
@@ -107,12 +111,14 @@
 
 Τα κελιά του πίνακα στη τελική έκδοση θα περιέχουν όλους τους χρήστες που πληρούν την αναζήτηση και τις πληροφορίες τους ανά στήλη.
 
+Επίσης υπάρχει και λειτουργία αναζήτησης συγκεκριμένου χρήστη στο κάτω μέρος της οθόνης.
+
 \subsection{Review Peers}
 
 Στο Σχήμα \ref{Οθόνη "Review peers" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας του Review άλλων χρηστών.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/template.png}}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Review Peers.png}}
 	\caption{Οθόνη "Review peers" λειτουργικότητας}
 	\label{Οθόνη "Review peers" λειτουργικότητας}
 \end{figure}
@@ -128,7 +134,7 @@
 Στο Σχήμα \ref{Οθόνη "My Listings" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής των βιβλίων που προσφέρει ο χρήστης σε άλλους να νοικιάσουν, μαζί με δυνατότητα προσθήκης και αφαίρεσης άλλων βιβλίων.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings, Rent Book, Transaction History.png}}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings.png}}
 	\caption{Οθόνη "My Listings" λειτουργικότητας}
 	\label{Οθόνη "My Listings" λειτουργικότητας}
 \end{figure}
@@ -142,7 +148,7 @@
 Στο Σχήμα \ref{Οθόνη "Requests" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής αιτήσεων άλλων και της αποδοχή τους (δηλαδή προσφοράς του βιβλίου στον χρήστη που το ζητάει και έκανε την αίτηση και αποδοχή του χρηματικού αντίτιμου). Επίσης στο κάτω μέρος της σελίδας υπάρχει ένα κουμπί που προσφέρει λειτουργικότητα δημιουργίας νέας αίτησης.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/template.png}}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Request.png}}
 	\caption{Οθόνη "Requests" λειτουργικότητας}
 	\label{Οθόνη "Requests" λειτουργικότητας}
 \end{figure}
@@ -156,7 +162,7 @@
 Στο Σχήμα \ref{Οθόνη "Transaction History" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής συναλλαγών (προηγούμενων και τρεχόντων) καθώς και της αποδοχής ή απόρριψης αιτημάτων και ανανέωσης κατάστασης κατοχής βιβλίου (δηλαδή ανανεώνεται όταν έχει φτάσει το βιβλίο στον ενοικιαστή και πίσω στον ιδιοκτήτη).
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/My Listings, Rent Book, Transaction History.png}}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Transaction History.png}}
 	\caption{Οθόνη "Transaction History" λειτουργικότητας}
 	\label{Οθόνη "Transaction History" λειτουργικότητας}
 \end{figure}
@@ -170,7 +176,7 @@
 Στο Σχήμα \ref{Οθόνη "Profile" λειτουργικότητας} παρουσιάζεται mock-up οθόνη της λειτουργικότητας της προβολής και αλλαγής των στοιχείων του λογαριασμού του συνδεδεμένου χρήστη.
 
 \begin{figure}[H]
-	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/change_password.png}}
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Mockup Screens/Profile.png}}
 	\caption{Οθόνη "Profile" λειτουργικότητας}
 	\label{Οθόνη "Profile" λειτουργικότητας}
 \end{figure}
@@ -199,6 +205,7 @@
 	\item \textbf{Γρηγόρης Καπαδούκας:} Author
 	\item \textbf{Χρήστος Μπεστητζάνος:} Editor, Contributor
 	\item \textbf{Νικόλαος Αυγέρης:} Peer Reviewer
+	\item \textbf{Περικλής Κοροντζής:} Peer Reviewer
 \end{enumerate}
 
 \end{document}
