--- a/1ο Παραδοτέο/Project-Plan/Files/Project-plan-v0.1.tex
+++ b/1ο Παραδοτέο/Project-Plan/Files/Project-plan-v0.1.tex
@@ -23,16 +23,6 @@
           [Language=Default]{Liberation Sans}
 \babelfont{tt}
           [Language=Default]{Liberation Sans}
-\hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=blue,      
-	urlcolor=blue,
-	pdftitle={An Example},
-	pdfpagemode=FullScreen,
-}
-
-\urlstyle{same}
 
 %Enter Title Here
  \title{Project-plan-v0.1 \\ LibShare}
@@ -135,7 +125,7 @@ $μισθοι = μερες \cdot \frac{ωρες}{μερα} \cdot \frac{ευρω}
 
 	\item \textbf{Security audit:} 1500\euro
 
-		Αναζητώντας για τιμές στο διαδίκτυο βλέπουμε ένα security audit μπορεί να κοστίσει από 700 - 2500\textdollar\space (\href{https://www.getastra.com/blog/security-audit/it-security-audit-cost/}{Πηγή}), οπότε υπολογίζουμε γύρω στα 1500\euro.
+		Αναζητώντας για τιμές στο διαδίκτυο βλέπουμε ένα security audit μπορεί να κοστίσει από 700 - 2500\textdollar\space (\href{https://www.getastra.com/blog/security-audit/it-security-audit-cost/}{\color{blue}Πηγή}), οπότε υπολογίζουμε γύρω στα 1500\euro.
 
 	\item \textbf{Νομική Συμβουλή:} 1500\euro
 
@@ -175,5 +165,6 @@ $Συνολο = 595840 + 1400 + 6000 + 1500 + 1500 + 10800 + 1800 + 720 + 900 \a
 	\item \textbf{Γρηγόρης Καπαδούκας:} Author
 	\item \textbf{Χρήστος Μπεστητζάνος:} Editor, Contributor
 	\item \textbf{Νικόλαος Αυγέρης:} Peer Reviewer
+	\item \textbf{Περικλής Κοροντζής:} Peer Reviewer
 \end{enumerate}
 \end{document}
