--- a/1ο Παραδοτέο/Team-Plan/Files/Team-plan-v0.1.tex
+++ b/1ο Παραδοτέο/Team-Plan/Files/Team-plan-v0.1.tex
@@ -24,19 +24,10 @@
           [Language=Default]{Liberation Sans}
 \babelfont{tt}
           [Language=Default]{Liberation Sans}
-\hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=blue,      
-	urlcolor=blue,
-	pdftitle={An Example},
-	pdfpagemode=FullScreen,
-}
-
 
 %Enter Title Here
  \title{Team-plan-v0.1 \\ LibShare}
- \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree\\ \\ \href{https://github.com/GregKapadoukas/University-Software-Engineering-Project}{GitHub Link}}
+ \author{\textbf{Ονόματα / ΑΜ / Έτος:} \\ Γρηγόρης Καπαδούκας / 1072484 / 4\textdegree \\ Χρήστος Μπεστητζάνος / 1072615 / 4\textdegree \\ Νικόλαος Αυγέρης / 1067508 / 5\textdegree \\ Περικλής Κοροντζής / 1072563 / 4\textdegree\\ \\ \href{https://github.com/GregKapadoukas/University-Software-Engineering-Project}{\color{blue}GitHub Link}}
 
 \begin{document}
 
