Added search use case, still need to correct rent use case

--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -43,33 +43,90 @@
 
 \section{Ροές των Use Cases}
 
+\subsection{Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
+
+\subsubsection*{Βασική Ροή <<Αναζήτηση βιβλίων / χρήστη / αιτήσεων>>: Αναζήτηση βιβλίων}
+\begin{enumerate}
+    \item Το σύστημα προσπαθεί να συνδεθεί στη βάση δεδομένων και το κάνει με επιτυχία.
+        \label{Έλεγχος σύνδεσης στη βάση δεδομένων}
+    \item Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "και τα δύο" (δηλαδή και από κοντά και ταχυδρομικώς) και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
+        \label{Επιλογή τύπου αναζήτησης}
+    \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι υπάρχουν.
+        \label{Ύπαρξη βιβλίου}
+    \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
+    \item Ο χρήστης επιλέγει ένα από τα βιβλία.
+    \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να κάνει αίτηση ενοικίασης του βιβλίου στον χρήστη αυτόν.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 1: Δεν μπορεί να επιτευχθεί σύνδεση στη βάση δεδομένων:}
+\begin{enumerate}
+    \item[\ref{Έλεγχος σύνδεσης στη βάση δεδομένων}.1.] Το σύστημα διαπιστώνει ότι δεν μπορεί να συνδεθεί στη βάση δεδομένων.
+    \item[\ref{Έλεγχος σύνδεσης στη βάση δεδομένων}.2.] Το σύστημα ενημερώνει τον χρήστη ότι η πλατφόρμα αντιμετωπίζει τεχνικές δυσκολίες.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 2: Αναζήτηση χρήστη - Αυτός υπάρχει:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "χρήστης" και εισάγει ένα κείμενο αναζήτησης (το username του χρήστη που αναζητεί).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.] Το σύστημα ελέγχει αν υπάρχει άλλος χρήστης με το όνομα που ζήτησε ο χρήστης και βλέπει ότι υπάρχει.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.3.] Το σύστημα προβάλλει στον χρήστη το προφίλ του χρήστη που αναζήτησε, δηλαδή το username, το rating του, την τοποθεσία που μένει και το description που έχει ορίσει για τον λογαριασμό του. Επίσης προβάλλει ένα κουμπί προσθήκης χρήστη στη λίστα των αγαπημένων (το οποίο χρησιμοποιείται για το use case των notifications και αγαπημένων).
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 3: Αναζήτηση χρήστη - Αυτός δεν υπάρχει:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.1.] Το σύστημα ελέγχει αν υπάρχει άλλος χρήστης με το όνομα που ζήτησε ο χρήστης και βλέπει ότι δεν υπάρχει.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.2.] Το σύστημα ενημερώνει τον χρήστη ότι ο χρήστης που αναζητεί δεν υπάρχει.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή υπάρχει:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις" και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση για το βιβλίο που αναζήτησε ο χρήστης και διαπιστώνει ότι υπάρχει.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.4.] Ο χρήστης επιλέγει ένα από τα βιβλία για τα οποία υπάρχουν αιτήσεις.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει αποδοχή της αίτησης.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 5: Αναζήτηση αίτησης - Αυτή δεν υπάρχει:}
+\begin{enumerate}
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.1.] Το σύστημα ελέγχει αν υπάρχει αίτηση για το βιβλίο που αναζήτησε ο χρήστης και διαπιστώνει ότι δεν υπάρχει.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
+\begin{enumerate}
+    \item[\ref{Ύπαρξη βιβλίου}.1.] Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι υπάρχουν.
+    \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία που να πληρούν τα κριτήρια αναζήτησης. 
+\end{enumerate}
+
+
 \subsection{Ενοικίαση βιβλίου από άλλο χρήστη}
+
 \subsubsection*{Βασική Ροή <<Ενοικίαση Βιβλίου>>: Συναλλαγή από κοντά:}
 \begin{enumerate}
     \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα αναρτημένα βιβλία από άλλους χρήστες που προτίθενται για ενοικίαση, και διαπιστώνει ότι υπάρχουν.
-    \label{Έλεγχος ύπαρξης βιβλίου}
+        \label{Έλεγχος ύπαρξης βιβλίου}
     \item To σύστημα εμφανίζει τα διαθέσιμα βιβλία στον χρήστη.
     \item Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item Το σύστημα εμφανίζει στον χρήστη πληροφορίες για τους διαθέσιμους ιδιοκτήτες που προσφέρουν το βιβλίο, διαθέσιμους τρόπους συναλλαγής (ταχυδρομικώς ή από κοντά) και την τιμή ανά μέρα.
     \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που θέλει, επιλέγοντας συναλλαγή από κοντά.
-    \label{Επιλογή τρόπου συναλλαγής}
+        \label{Επιλογή τρόπου συναλλαγής}
     \item Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
-    \label{Έλεγχος ποσού ασφαλείας}
+        \label{Έλεγχος ποσού ασφαλείας}
     \item Το σύστημα επιβεβαιώνει ότι η αίτηση ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη.
-    \label{Αποδοχή ή απόρριψη συναλλαγής}
+        \label{Αποδοχή ή απόρριψη συναλλαγής}
     \item Το σύστημα εμφανίζει στοιχεία επικοινωνίας του ιδιοκτήτη στον ενοικιαστή.
     \item Ο ενοικιαστής, αφού βρεθεί με τον ιδιοκτήτη από κοντά και παραλάβει το βιβλίο, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου. Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα.
     \item Το σύστημα ελέγχει αν έλαβε ενημέρωση κατοχής του βιβλίου και από τον ενοικιαστή και από τον ιδιοκτήτη.
-    \label {Δεν ενημερώνεται η κατοχή}
+        \label {Δεν ενημερώνεται η κατοχή}
     \item Το σύστημα δεσμεύει "ποσό ασφαλείας" από τον λογαριασμό του ενοικιαστή, και αρχίζει να τον χρεώνει αυτόματα μέρα με τη μέρα.
-    \label{Τέλος dispute resolved - Τέλος χρημάτων}
+        \label{Τέλος dispute resolved - Τέλος χρημάτων}
     \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του παραχωρεί το βιβλίο, έπειτα του οποίου ενημερώνουν και οι δύο το σύστημα ότι το βιβλίο έχει επιστραφεί.
-    \label{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}
+        \label{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}
     \item Το σύστημα, λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη, σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας".
-    \label{Τέλος ενοικίασης}
+        \label{Τέλος ενοικίασης}
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 1: Δεν υπάρχουν Βιβλία προς ενοικίαση:}
+\subsubsection*{Εναλλακτική Ροή 1: Δεν υπάρχουν βιβλία προς ενοικίαση:}
 \begin{enumerate}
     \item[\ref{Έλεγχος ύπαρξης βιβλίου}.1.] Το σύστημα διαπιστώνει ότι δεν υπάρχουν διαθέσιμα βιβλία για τον ενοικιαστή να νοικιάσει.
     \item[\ref{Έλεγχος ύπαρξης βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία.
